--- a/css/lista.css
+++ b/css/lista.css
@@ -1,4 +1,4 @@
-/* css/style.css */
+/* lista.css */
 
 body {
   font-family: Arial, sans-serif;
@@ -61,4 +61,79 @@ a {
   margin-top: 20px;
   text-decoration: none;
   color: blue;
+}
+
+.form-editar {
+  display: none; 
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  width: 300px; /* largura fixa */
+}
+
+.form-editar h2 {
+  margin-top: 0;
+  text-align: center;
+}
+
+.form-editar label {
+  display: block;
+  margin: 10px 0;
+  font-weight: bold;
+}
+
+.form-editar input[type="text"],
+.form-editar input[type="number"],
+.form-editar select {
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin: 5px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.form-editar button {
+  width: 100px;
+  padding: 10px;
+  margin: 10px 5px 0 0;
+  background-color: #008cba;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: left;
+}
+
+.form-editar button:last-child {
+  background-color: #f44336;
+}
+
+.form-editar button:hover {
+  background-color: #007B9E;
+}
+
+.form-editar button:last-child:hover {
+  background-color: #e53935;
+}
+
+.form-editar .form-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 600px) {
+  .form-editar {
+    width: 100%;
+    height: auto;
+    top: 20px;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
 }
