--- a/css/lista.css
+++ b/css/lista.css
@@ -1,4 +1,4 @@
-/* lista.css */
+
 
 body {
   font-family: Arial, sans-serif;
@@ -75,7 +75,7 @@ a {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
-  width: 300px; /* largura fixa */
+  width: 300px; 
 }
 
 .form-editar h2 {
