--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ button {
 button[type="submit"] {
   background-color: #4caf50;
   color: white;
+  margin-bottom: 10px;
 }
 
 button[type="button"] {
@@ -77,12 +78,16 @@ a {
   display: block;
   text-align: center;
   margin-top: 20px;
-  color: #0000ee;
+  color: #fff;
   text-decoration: none;
+  font-weight: 500;
+  border-radius: 4px;
+  padding: 10px 20px;
+  background-color: #26272b;
 }
 
 a:hover {
-  text-decoration: underline;
+  opacity: 0.8;
 }
 
 @media (max-width: 600px) {
