--- a/css/style.css
+++ b/css/style.css
@@ -15,19 +15,21 @@ h1 {
 .form-container {
   display: flex;
   flex-direction: column;
-  width: 90%;
+  width: 85vw;
   max-width: 400px;
-  margin: 20px auto;
+  margin: 30px auto;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   background-color: #fff;
 }
 
 .form-group {
   display: flex;
   flex-direction: column;
+  justify-content: stretch;
+  align-content: space-between;
   margin-bottom: 15px;
 }
 
@@ -40,8 +42,8 @@ input,
 select {
   padding: 10px;
   font-size: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 1px solid #262222;
+  border-radius: 8px;
   box-sizing: border-box;
 }
 
@@ -66,7 +68,7 @@ button[type="button"] {
 
 button[type="submit"]:hover,
 button[type="button"]:hover {
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 .form-buttons {
